feat: create docs for edit and delete
